--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Free coming soon template with jQuery countdown">
-
+    <meta name="description" content="Guess what's gonna happen. Win awesome prizes!">
+    <meta property="og:type"               content="Website" />
+    <meta property="og:title"              content="When Great Minds Don’t Think Alike" />
+    <meta property="og:description"        content="Guess what's gonna happen. Win awesome prizes!" />
+    <meta property="og:image"              content="http://188.166.191.110/guesswhat.lk/assets/img/logolk-white.png" />
     <title>GuessWhat | Coming Soon!</title>
 
     <!-- Bootstrap -->
