Fix image metadata

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type"               content="Website" />
     <meta property="og:title"              content="When Great Minds Don’t Think Alike" />
     <meta property="og:description"        content="Guess what's gonna happen. Win awesome prizes!" />
-    <meta property="og:image"              content="http://188.166.191.110/guesswhat.lk/assets/img/logolk-white.png" />
+    <meta property="og:image"              content="http://188.166.191.110/guesswhat.lk/assets/img/logo-mini-meta.jpg" />
     <title>GuessWhat | Coming Soon!</title>
 
     <!-- Bootstrap -->
