--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Guess what's gonna happen. Win awesome prizes!">
     <meta property="og:type"               content="Website" />
-    <meta property="og:title"              content="When Great Minds Don’t Think Alike" />
+    <meta property="og:title"              content="GessWhat.lk | Guess & Win!" />
     <meta property="og:description"        content="Guess what's gonna happen. Win awesome prizes!" />
     <meta property="og:image"              content="http://188.166.191.110/guesswhat.lk/assets/img/logo-mini-meta.jpg" />
     <title>GuessWhat | Coming Soon!</title>
