Add new meta image (post)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type"               content="Website" />
     <meta property="og:title"              content="GessWhat.lk | Guess & Win!" />
     <meta property="og:description"        content="Guess what's gonna happen. Win awesome prizes!" />
-    <meta property="og:image"              content="http://188.166.191.110/guesswhat.lk/assets/img/logo-mini-meta.jpg" />
+    <meta property="og:image"              content="http://188.166.191.110/guesswhat.lk/assets/img/Cricker post-meta.jpg" />
     <title>GuessWhat | Coming Soon!</title>
 
     <!-- Bootstrap -->
